# cgeodesy

./: .gitmodules  CMakeLists.txt
include/cgeodesy/: ellipsoid.h  geodetic_position.h  wgs84.h
src/: ellipsoid.c  geodetic_position.c
tests/: ellipsoid_tests.h  geodetic_position_tests.h  main.c
